# dpm-mcp

./: .dockerignore  .env.example  .gitignore  Dockerfile  HISTORY.md  PLANNING.md  README.md  initial-prompt.md  pyproject.toml
skills/: README.md  splor-dpm-conventions.md  splor-sigplan.md  splor-sisor.md  splor-temporal-analysis.md
src/dpm_mcp/: __init__.py  auth.py  catalog.py  datapackage.py  github.py  http_auth.py  models.py  server.py  toml_loader.py  url_utils.py
tests/: test_auth.py  test_catalog.py  test_toml_loader.py  test_url_utils.py
